# dyninst

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  CMakeLists.txt  parse.pl
.github/: README.md
.github/scripts/: compiler_multibuild_configs.py
.github/workflows/: base-containers.yaml  build.yaml  cmake-formatting.yaml  compiler-multibuild.yaml  consumers.yaml  dependency-version.yaml  dev-containers.yaml  docs.yaml  dwqual.yaml  libabigail.yaml  mac-test.yaml  oses.yaml  pr-tests.yaml  purge-containers.yaml  release-containers.yaml  spack-build.yaml  system-libs.yaml  unit-tests.yaml
.gitlab/: .uofrank.gary.yaml  sync-spack.yaml
.gitlab/scripts/: SpackCIBridge.py
cmake/: Boost.cmake  DyninstOptions.cmake  ElfUtils.cmake  ThreadingBuildingBlocks.cmake
cmake/Modules/: Dyninst32bitRuntimeFlag.cmake  DyninstLinkProperties.cmake  DyninstPIESupported.cmake
cmake/tpls/: DyninstBoost.cmake  DyninstCapstone.cmake
common/: CMakeLists.txt
common/h/: Annotatable.h  Architecture.h  Buffer.h  DynAST.h  Edge.h  Graph.h  MachSyscall.h  Node.h  SymReader.h  VariableLocation.h  abi.h  compiler_diagnostics.h  concurrent.h  util.h
common/src/: AST.C  MappedFile.C  MappedFile.h  Timer.h  addrtranslate-freebsd.C  addrtranslate-sysv.C  addrtranslate.C  arch-power.h  arch-riscv64.h  dyninst_filesystem.h  dyninst_regex.h  freebsdKludges.C  lprintf.h  math.h  pathName.C  stats.h  util.C
dataflowAPI/: CMakeLists.txt
dataflowAPI/doc/: dataflowAPI.tex
dataflowAPI/h/: ABI.h  Absloc.h  AbslocInterface.h  SymEval.h  liveness.h  registerLivenessSet.h  slicing.h  stackanalysis.h
dataflowAPI/src/: Absloc.C  AbslocInterface.C  ExpressionConversionVisitor.C  RegisterMap.C  RoseInsnFactory.C  SymEval.C  SymEvalPolicy.h  SymEvalVisitors.h  SymbolicExpansion.C  convertOpcodes.C  liveness.C  slicing.C  stackanalysis.C
docker/: Dockerfile.fedora  Dockerfile.ubuntu
docs/: README.md  index.rst  manual_frontpage.tex
docs/dataflowAPI/: dataflowAPI.tex
docs/dynC_API/: dynC_API.tex
docs/instructionAPI/: instructionAPI.tex
docs/parseAPI/: parseAPI.tex
docs/patchAPI/: Makefile.doc  patchAPI.tex
docs/stackwalk/: stackwalk.tex
docs/symtabAPI/: symtabAPI.tex
dwarf/h/: dwarfFrameParser.h  dwarfResult.h
dynC_API/doc/: dynC_API.tex
dyninstAPI/: CMakeLists.txt
dyninstAPI/doc/: Abstractions.tex  AppendixA.tex  AppendixB.tex  AppendixC.tex  Examples.tex  Introduction.tex  MemoryAccess.tex  OptimizingPerformance.tex  References.tex  TypeSystem.tex  Usage.tex  dyninstAPI.tex
dyninstAPI/h/: BPatch.h  BPatch_Set.h  BPatch_addressSpace.h  BPatch_basicBlock.h  BPatch_basicBlockLoop.h  BPatch_binaryEdit.h  BPatch_edge.h  BPatch_flowGraph.h  BPatch_frame.h  BPatch_function.h  BPatch_image.h  BPatch_instruction.h  BPatch_loopTreeNode.h  BPatch_memoryAccess_NP.h  BPatch_module.h  BPatch_object.h  BPatch_parRegion.h  BPatch_point.h  BPatch_process.h  BPatch_snippet.h  BPatch_sourceBlock.h  BPatch_statement.h  BPatch_thread.h  BPatch_type.h  StackMod.h
dyninstAPI/src/: BPatch.C  BPatch_addressSpace.C  BPatch_basicBlock.C  BPatch_binaryEdit.C  BPatch_collections.C  BPatch_collections.h  BPatch_flowGraph.C  BPatch_image.C  BPatch_instruction.C  BPatch_memoryAccess.C  BPatch_memoryAccessAdapter.C  BPatch_module.C  BPatch_object.C  BPatch_point.C  BPatch_process.C  BPatch_snippet.C  BPatch_type.C  Parsing.h  RegisterConversion-aarch64.C  RegisterConversion-ppc.C  addressSpace.C  addressSpace.h  ast.C  ast.h  baseTramp.C  baseTramp.h  binaryEdit.C  binaryEdit.h  codeRange.C  codeRange.h  codegen-aarch64.C  codegen-aarch64.h  codegen-power.C  codegen-power.h  codegen-x86.C  codegen-x86.h  codegen.C  codegen.h  debug.C  dynProcess.C  (+66 more)
dyninstAPI_RT/: CMakeLists.txt
dyninstAPI_RT/h/: dyninstAPI_RT.h  dyninstRTExport.h
dyninstAPI_RT/src/: RTcommon.c  RTthread.c  RTthread.h
elf/h/: Elf_X.h
instructionAPI/: CMakeLists.txt
instructionAPI/doc/: instructionAPI.tex
instructionAPI/h/: ArchSpecificFormatters.h  BinaryFunction.h  Dereference.h  Expression.h  Instruction.h  InstructionAST.h  MultiRegister.h  Operand.h  Operation_impl.h  Register.h  Result.h  Ternary.h  interrupts.h  syscalls.h
instructionAPI/src/: ArchSpecificFormatters.C  Instruction.C  (+14 more)
parseAPI/: CMakeLists.txt
tests/: CMakeLists.txt  opcode_tests.cpp  opcode_tests.h
tests/MachRegister/base_registers/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/integration/InstructionAPI/: CMakeLists.txt
tests/integration/InstructionAPI/decoder/: CMakeLists.txt  cft_tests.cpp  cft_tests.h  decode_verify.cpp  decode_verify.h  memory_tests.cpp
tests/integration/InstructionAPI/decoder/x86/: CMakeLists.txt  arithmetic.cpp  branches.cpp  call.cpp  control_flow.cpp  data_transfer.cpp  memory_read_write.cpp  register_read_write.cpp  sse.cpp  stack.cpp  strings.cpp  sysctl.cpp  x87.cpp  x87_comparison.cpp
tests/regression/: CMakeLists.txt  DyninstRegTests.cmake
tests/regression/binaries/: CMakeLists.txt  regression_test_binaries.cpp  test_binaries.h
tests/regression/dyninstAPI/: CMakeLists.txt
tests/regression/dyninstAPI/BPatch_image/: CMakeLists.txt  findFunction.cpp  findModule.cpp
tests/regression/dyninstAPI/addressSpace/: CMakeLists.txt  findModule.cpp  findObject.cpp
tests/regression/dyninstAPI/find_main/: CMakeLists.txt
tests/regression/dyninstAPI/image/: CMakeLists.txt  findModule.cpp
tests/regression/dyninstAPI/mapped_object/: CMakeLists.txt
tests/regression/regex_search/: CMakeLists.txt  regex_search.h
tests/regression/regex_search/dyninstAPI/BPatch_image/: CMakeLists.txt
tests/regression/regex_search/dyninstAPI/addressSpace/: CMakeLists.txt  findModule.cpp  findObject.cpp
tests/regression/regex_search/dyninstAPI/image/: CMakeLists.txt  findModule.cpp
tests/regression/regex_search/dyninstAPI/mapped_object/: findModule.cpp
tests/regression/symtabAPI/DWARF/: CMakeLists.txt  dwarf5_inline_func.cpp  function_params.cpp  linemaps.cpp  test.cpp
tests/unit/common/: CMakeLists.txt
tests/unit/common/registers/: CMakeLists.txt
tests/unit/dyninstAPI/emitter/: CMakeLists.txt  x86.cpp  x86_64.cpp
(+327 files in other folders)
